Views on Mobile were not being scaled correctly

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -36,8 +36,13 @@
   color:#333;
 }
 
+.slide {
+  width: 100%;
+  text-align: center;
+}
+
 .slide img {
-  width:100%;
+  height:500px;
   margin:30px 0;
 }
 
@@ -68,5 +73,6 @@
   }
   .slide img {
     margin:55px 0;
+    height: 210px;
   }
 }
